<resources>
    <string name="app_name">MekVahan</string>
    <string name="facebook_app_id">159814198469500</string>
    <string name="fb_login_protocol_scheme">fb159814198469500</string>
    <string name="app_version">2019 Mekvahan, App Version 1.3</string>
    <string name="progress_tobeimpl">To be implemented</string>
    <string name="splash">splash</string>
    <string name="service_perfection">Service with perfection</string>
    <string name="smart_way">Smartest way of care your myVehicleTable</string>
    <string name="emanated_india">Emanated in India</string>
    <string name="please_allocate">Please allocate your myVehicleTable and insert following details.</string>
    <string name="lorem_ipsum1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
        recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum">Lorem ipsum is empty dummy text of the printing and typesetting industry</string>
    <string name="start">Start Servicing</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="next">Next</string>
    <string name="see_all">See all FAQs</string>
    <string name="account">Account</string>
    <string name="login_enjoy">Login to enjoy hassle free and full access to our service</string>
    <string name="better_service">Better Service</string>
    <string name="happy_customers">Happy Customers</string>
    <string name="login">Login</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_send">OTP Send to</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="faqs">FAQ\'s</string>
    <string name="feedback">Send Feedback</string>
    <string name="enter_phonpass">Enter phone and password to continue</string>
    <string name="tendigit">10 digit mobile number</string>
    <string name="pass">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup">Signup</string>
    <string name="create_new_account">Create a new account with Mekvahan</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="referal_code">I have a referral code</string>
    <string name="by_creating_text">By creating an account, </string>
    <string name="i_accept">I accept the</string>
    <string name="term_condition">Terms &amp; Conditions</string>
    <string name="Rs">\u20B9</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">Maruti Suzuki</string>
    <string name="car">Wagan R</string>
    <string name="car_num">DL1R0ABC</string>
    <string name="change_pass">Change Password</string>
    <string name="valid_to">Valid to :</string>
    <string name="lbl_rc_number">RC Number</string>
    <string name="lbl_driving_license">Driving License</string>
    <string name="no_access">You cannot access the full benefits of app until your id is verified.</string>
    <string name="five_coins">5 coins will be charged for one call.</string>
    <string name="three_coins">3 coins will be charged for one sms.</string>
    <string name="done">Done</string>
    <string name="lbl_password_reset">Reset Password</string>
    <string name="number">Mobile Number</string>
    <string name="checkout">Checkout</string>
    <string name="total_amount">Total Amount</string>
    <string name="cod_text">COD(Cash On Delivery)</string>
    <string name="saved_card">Saved Cards</string>
    <string name="payment_option">Payment Option</string>
    <string name="my_car">Car</string>
    <string name="my_byke">Bike</string>
    <string name="standard_service">Standard Service</string>
    <string name="maruti_suzuki">Maruti Suzuki</string>
    <string name="wagan_r">Wagan R</string>
    <string name="description">Description</string>
    <string name="free_pickup">Free pick-up and drop.</string>
    <string name="twenty_point">20 point check-up.</string>
    <string name="replacement">Replacement of different consumables parts</string>
    <string name="refilling">Refilling of diffrent fuel top-ups(such as break fluid, engine oil, wiper fluid etc.)</string>
    <string name="free_exterior">Free exterior wash.</string>
    <string name="free_interior">Free interior cleaning, vacuuming and polishing.</string>
    <string name="ten_days">10 days service support.</string>
    <string name="what_all">What all is covered ?</string>
    <string name="complete_exterior">Complete exterior wash.</string>
    <string name="inspection">20 point inspection.</string>
    <string name="interior">Interior vacuuming , polishing and cleaning.</string>
    <string name="dashboardoorpolish">Dashboard and door polish.</string>
    <string name="parts_replacement">Parts replacement</string>
    <string name="name">Name</string>
    <string name="item_action">Item Action</string>
    <string name="check_mobile_number">Verify Number</string>
    <string name="lbl_login">Login</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enter_code">Enter referal code</string>
    <string name="order_detail">Order Details</string>
    <string name="package_detail">Package Details</string>
    <string name="payment_detail">Payment Details</string>
    <string name="service_loc">Service Location</string>
    <string name="service_datetime">Service date and time</string>
    <string name="payment_success">Payment Successfull</string>
    <string name="payment_failure">Payment Unsuccessfull</string>
    <string name="booking_success">Booking Successfull</string>
    <string name="our_representative">Our representative will pick your myVehicleTable  at given date and time.</string>
    <string name="trackorder">Track Order</string>
    <string name="err_msg_password">Password is not valid !</string>
    <string name="err_minimum_password">Enter minimum password</string>
    <string name="pickup_address">Pickup address</string>
    <string name="drop_address">Drop address</string>
    <string name="enter_details">Enter details</string>
    <string name="in_case">In case of additional notes</string>
    <string name="subtotal">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="additional_charges">Additional charges*</string>
    <string name="total">Total</string>
    <string name="tnc"><![CDATA[T & C Apply*]]></string>
    <string name="inviteandearn">INVITE AND EARN</string>
    <string name="Referyourfreind"><![CDATA[Refer your freind & both get Rs. 50 off on the next order above Rs. 100.]]></string>
    <string name="wanttopay">want to pay less for your service bill?</string>
    <string name="howitwork">How it works</string>
    <string name="viewyourreferral">View your referrals</string>
    <string name="sharetheinvite">Share the \'Invite Code\' with your friend.</string>
    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tue</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thu</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sat</string>
    <string name="material_calendar_sunday">Sun</string>
    <string name="Set_pass">Set Password</string>
    <string name="enter_yourpas">Enter your new password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="title_activity_track_order">Track Order</string>
    <string name="booking_datetime">Booking date and time</string>
    <string name="pickup_datetime">Pickup date and time</string>
    <string name="make_call">Click to make a call</string>
    <string name="emergency_towing">Emergency towing</string>
    <string name="details">Details</string>
    <string name="car_wash">Car wash</string>
    <string name="payment_awaited">Payment awaited</string>
    <string name="view_jobcard">View Job Card</string>
    <string name="job_table">Job Table</string>
    <string name="track_details">Track details</string>
    <string name="order_id">Order ID.</string>
    <string name="service_center">Service centre</string>
    <string name="require_pickup">Require Pickup</string>
    <string name="referandearn">Refer And Earn</string>
    <string name="prefer_this">Prefer this to your friends  and earn awards</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="service_type">Service type</string>
    <string name="added_services">Added Services</string>
    <string name="images">Images</string>
    <string name="lbl_complete_address">Complete Address</string>
    <string name="lbl_add_address_add_details">Add details</string>
    <string name="lbl_add_address_landmark">Landmark</string>
    <string name="lbl_add_address_locality">Locality</string>
    <string name="lbl_add_address_city">City</string>
    <string name="lbl_add_address_save_addressAs">Save address as :</string>
    <string name="lbl_add_address_home">Home</string>
    <string name="lbl_add_address_office">Office</string>
    <string name="lbl_add_address_others">Others</string>
    <string name="how_it_works_1"><![CDATA[After you refer someone, you and the referee each will get a credit of Rs 100 & Rs.50 in your respective wallets (after both of you download the app) and an additional credit of Rs. 25 & Rs. 75 (after both of you complete the first service of minimum Rs. 500 ).]]></string>
    <string name="how_it_works_2">The referral reward-amount earned, for both the referrer and referee, is not refundable in case the customer cancels his/her service."</string>
    <string name="how_it_works_3">The referral reward-amount earned, for both the referrer and referee, will be based on the ‘number of services\'.</string>
    <string name="max_allowed">Max referral allowed is 20 per user.</string>
    <string name="referral_waring">Company reserves the right to reject referral benefit to the customer.</string>
    <string name="t_cs_apply"><![CDATA[T&Cs Apply*]]></string>
    <string name="redeem_details">Create/Login to your Mekvahan account.\nSelect the service want to avail, Payment and choose your service Type in the transaction amount, in the next step use promo code NEW50 on App, complete the transaction to avail the cashback</string>
    <string name="TnCdetails">Valid on successful Service/Bill Payments done till 31th October 2019.\nApplicable for New users only.\nNo minimum transaction only Valid only Once per New User/Credit/Debit Card/Mobile Number.\nCashback will be credited to your Mekcoins Wallet which can be redeemed within 365 days from the date of credit and is non transferable Not Valid for Add Cash Transactions and transactions done via Mekvahan Balance Offer is not applicable on virtual/prepaid/temporary/international cards NEW50 Promo Code has to be applied to avail cashback offer.\nWe reserve the right to end/modify any or all offers at our discretion without any prior notice.\nFor all other queries please email support@mekvahan.com .\nWe reserve the right to restrict cashback for any account with suspicious behavior or invalid details/credentials.\nMekvahan has the right to ask for documents to prove his/her identity for any account.</string>
</resources>