<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sos.SosMainPages.FuelHomePage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/text_size16dp"
        android:layout_height="420dp"
        android:paddingBottom="72dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tnc"
                android:fontFamily="@font/montserrat_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_cs_apply"
                android:layout_marginVertical="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/howToRedeem"
                android:fontFamily="@font/montserrat_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How to Redeem ?"
                android:layout_marginVertical="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/createLogin"
                android:fontFamily="@font/montserrat_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redeem_details"
                android:textSize="12sp"
                android:lineSpacingMultiplier="1.1"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/termsNConditions"
                android:fontFamily="@font/montserrat_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Terms and Conditions"
                android:layout_marginVertical="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tncDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/TnCdetails"
                android:textSize="12sp"
                android:lineSpacingMultiplier="1.1"
                android:layout_marginLeft="10dp" />



        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:background="@color/red_button"
        android:textColor="@color/white"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="OK"/>





</FrameLayout>