<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:src="@drawable/arrow_back_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="Refer and Earn"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/background4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="How it works?"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_medium_regular"
                android:textSize="16sp"/>
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share the 'invite Code' with your friend"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="14sp"/>
            <TextView
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_it_works_1"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms and conditions:"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_medium_regular"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textSize="12sp"
                    android:text="1."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="12sp"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_it_works_2"
                    android:textColor="@color/black"/>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textSize="12sp"
                    android:text="2."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="12sp"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_it_works_3"
                    android:textColor="@color/black"/>


            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textSize="12sp"
                    android:text="3."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

                <TextView
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="12sp"
                    android:layout_marginLeft="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_allowed"
                    android:textColor="@color/black"/>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referral_waring"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_medium_regular"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>